--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   iconly: ^1.0.1
   crystal_navigation_bar: ^1.0.4
   provider: ^6.1.5
+  permission_handler: ^12.0.0+1
+  intl: ^0.19.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
