--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ dependencies:
   crystal_navigation_bar: ^1.0.4
   provider: ^6.1.5
   permission_handler: ^12.0.0+1
-  intl: ^0.20.2
   image_picker: ^1.1.2
+  intl: ^0.19.0
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
